plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.116'
}



version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    maven {
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }

    maven {
        name = "CurseMaven"
        url = "https://cursemaven.com/"
    }
}

dependencies {

    implementation "curse.maven:apothecary-potion-expansion-1278100:8591720"
    implementation "curse.maven:curios-309927:6529130"

    runtimeOnly("curse.maven:nameless-trinkets-541466:8195531")
    runtimeOnly("curse.maven:spark-361579:6225208")
    runtimeOnly("curse.maven:jei-238222:7391682")
    runtimeOnly("curse.maven:crafttweaker-239197:7772819")
    runtimeOnly("curse.maven:simply-potion-rings-1217574:8472116")

    /*
    runtimeOnly(fg.deobf("curse.maven:just-enough-resources-jer-240630:5057220"))

    implementation fg.deobf("curse.maven:neat-238372:5838485")
    implementation fg.deobf("curse.maven:blessfulled-1182590:6624691")
    implementation fg.deobf("curse.maven:more-artifacts-1143299:7553653")

    implementation fg.deobf("curse.maven:simply-potion-rings-1217574:8472112")
    //compileOnly(fg.deobf("curse.maven:first-aid-276837:5531834"))
    implementation fg.deobf("curse.maven:first-aid-276837:5531834")
    //implementation fg.deobf("curse.maven:yyzsbackpack-1285177:7065899")
    //implementation fg.deobf("curse.maven:jade-324717:8479276")

     */
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

sourceSets.main.resources.srcDir generateModMetadata

neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}